--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.8",
+    "icons": "^1.0.0",
     "next": "14.2.11",
     "postcss": "^7.0.39",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
