--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.4.13",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
